# CPG_ANALYTICS

./: .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  info.md  pyproject.toml
.github/workflows/: ci.yml
config/: ingestion.json  ingestion.yaml
db/init/: 01_schema.sql
docs/: llm_options.md
scripts/: generate_data.py
src/api/: llm.py  main.py  models.py  queries.py
src/api/routes/: database.py  dq_reports.py  forecast.py  generate.py  health.py  ingest.py
src/common/: config.py  db.py  excel_io.py
src/dq/: checker.py
src/forecasting/: forecaster.py
src/ingestion/: config_loader.py  db_writer.py  ingestion_config.py  loader.py  pipeline.py
tests/: conftest.py  test_api.py  test_excel_io.py  test_forecaster.py  test_integration.py  test_pipeline.py
ui/: api_client.py  app.py
ui/pages/: api_docs.py  architecture.py  dashboard.py  data_loads.py  database.py  dq_reports.py  forecast.py  home.py  insights.py  test_coverage.py
