[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-analytics"
version = "0.1.0"
description = "End-to-end CPG sales analytics platform"
requires-python = ">=3.11"
dependencies = [
    # Data / ETL
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=1.26",

    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",

    # API
    "fastapi>=0.137",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",

    # Forecasting
    "prophet>=1.1",

    # UI
    "streamlit>=1.35",

    # HTTP client (Ollama LLM calls)
    "httpx>=0.27",

    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",           # async test client for FastAPI
    "factory-boy>=3.3",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "types-psycopg2>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts", "ui"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by black
    "B008",  # FastAPI Query/Depends as default arg — intentional pattern
]

[tool.ruff.lint.per-file-ignores]
"ui/**" = ["E402"]  # sys.path.insert before imports is required in Streamlit pages

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
